syntax = "proto3";

package flights;

message Airport {
  string name = 2;
}

message FlightData {
  string date = 2;
  Airport from = 13;
  Airport to = 14;
}

enum Seat {
  ECONOMY = 1;
  PREMIUM_ECONOMY = 2;
  BUSINESS = 3;
  FIRST = 4;
}

enum Trip {
  ROUND_TRIP = 1;
  ONE_WAY = 2;
  MULTI_CITY = 3; // not implemented
}

enum Passenger {
  ADULT = 1;
  CHILD = 2;
  INFANT_IN_SEAT = 3;
  INFANT_ON_LAP  = 4;
}

message Tfs {
  repeated FlightData data = 3;
  Seat seat = 9;
  repeated Passenger passengers = 8;
  Trip trip = 19;
}
